--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: home
+layout: page
 ---
 <div>
-    <p> 你好，欢迎来到首页</p>
-    <p>查看博文，请点击：</p>
+    <div class="index-header">
+       <p style="text-align: center;"> hi,你来啦</p>
+    </div>
+    <!-- 文章展示 -->
+    {% for post in site.posts %}
+    <li>
+        <a href="{{post.url}}">
+        {{post.title}}
+        </a>
+        {{post.date | date_to_string}}  
+        <p class="excerpt">{{ post.excerpt}}</p>
+    </li>
+    {% endfor %}
+    <!-- 文章展示结束 -->
 </div>
