--- a/index.html
+++ b/index.html
@@ -2,21 +2,11 @@
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 
-layout: default
+layout: home
 ---
 <div>
     <div class="index-header">
        <p style="text-align: center;"> hi,你来啦</p>
     </div>
-    <!-- 文章列表 -->
-    {% for post in site.posts %}
-    <li>
-        <a href="{{post.url}}">
-        {{post.title}}
-        </a>
-        {{post.date | date_to_string}}  
-        <p class="excerpt">{{ post.excerpt}}</p>
-    </li>
-    {% endfor %}
-    <!-- 文章列表结束 -->
+  
 </div>
