--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: home
 ---
 <div>
-    <div class="index-header">
-       <p style="text-align: center;"> hi,你来啦</p>
+    <div class="index-header" style="text-align: center;">
+       <p> <strong> hi,你来啦</strong> </p>
     </div>
 </div>
